discussion/kv_engine/175752/175752_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52158: Check for RangeScan privilege in continue/cancel

A range-scan requires that the user has the RangeScan privilege
somewhere in the "path" to the collection. For RangeScan create
this is checked by mcbp_privileges as the incoming command states
which collection the scan is against.

For continue/cancel the engine must do the checks as it needs to
locate the scan and then the scan's collection.

A "bonus" of this is that the collection is also existence checked
during the checkPrivilege method, allowing continue to 'force'
cancel the scan if the collection rather than waiting for the scan
to move forward (load a key) and fail in range_scan_callbacks.cc

Change-Id: I3e1b6ad043e9d377aa897b8a2a64a637f36ac7a9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-06-23 12:19:02.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-23 12:52:46.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47002/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\range_scans/range_scan.h(102): error C4430: missing type specifier - int assumed. Note: C++ does not support default-int ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47002/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18258/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.cc:237:28: error: out-of-line definition of "hasPrivilege" does not match any declaration in "RangeScan" [clang-diagnostic-error]
cb::engine_errc RangeScan::hasPrivilege(
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:102:40: error: unknown type name "EventuallyPersistentEngine" [clang-diagnostic-error]
                                 const EventuallyPersistentEngine& engine);
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.cc:267:37: error: out-of-line definition of "hasPrivilege" does not match any declaration in "VB::RangeScanOwner" [clang-diagnostic-error]
cb::engine_errc VB::RangeScanOwner::hasPrivilege(
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.h:197:19: error: unknown type name "EventuallyPersistentEngine" [clang-diagnostic-error]
            const EventuallyPersistentEngine& engine) const;
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1606:5: error: constructor for "RangeScanOwnerTest" must explicitly initialize the member "readyScans" which does not have a default constructor [clang-diagnostic-error]
    RangeScanOwnerTest() : rangeScans(&readyScans) {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1618:21: note: member is declared here
    ReadyRangeScans readyScans;
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_owner.h:36:7: note: "ReadyRangeScans" declared here
class ReadyRangeScans {
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:962:34: error: no matching constructor for initialization of "DummyRangeScanHandler" [clang-diagnostic-error]
    { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1431:34: note: in instantiation of function template specialization "std::make_unique<DummyRangeScanHandler>" requested here
                            std::make_unique<DummyRangeScanHandler>());
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1239:5: note: candidate constructor not viable: requires single argument "callbackCounter", but no arguments were provided
    DummyRangeScanHandler(size_t& callbackCounter)
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1237:7: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
class DummyRangeScanHandler : public RangeScanDataHandlerIFace {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1237:7: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 0 were provided

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18258/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.cc:237:28:
error: out-of-line definition of "hasPrivilege" does not match any declaration in "RangeScan" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18258/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39478/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan.h:102:40:
error: unknown type name "EventuallyPersistentEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39478/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8029/ : FAILURE

Compile error at [2022-06-23T12:27:56.088Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/ep_engine.cc:838:27:
error: ?class Configuration? has no member named ?setRangeScanMaxLifetime?; did you mean ?getRangeScanMaxLifetime??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8029/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19343/ : FAILURE

Compile error at [2022-06-23T12:23:29.127Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/range_scans/range_scan.h:102:40:
error: unknown type name "EventuallyPersistentEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19343/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7927/ : FAILURE

Compile error at [2022-06-23T12:30:56.500Z] ../kv_engine/engines/ep/src/range_scans/range_scan.h:102:40:
error: unknown type name "EventuallyPersistentEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7927/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20124/ : FAILURE

Compile error at [2022-06-23T12:35:40.976Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/ep_engine.cc:838:27:
error: ?class Configuration? has no member named ?setRangeScanMaxLifetime?; did you mean ?getRangeScanMaxLifetime??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20124/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20471/ : FAILURE

Compile error at [2022-06-23T12:40:21.546Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/ep_engine.cc:838:27:
error: ?class Configuration? has no member named ?setRangeScanMaxLifetime?; did you mean ?getRangeScanMaxLifetime??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20471/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28505/ : FAILURE

Compile error at [2022-06-23T12:42:15.052Z] ../kv_engine/engines/ep/src/range_scans/range_scan.h:102:40:
error: unknown type name "EventuallyPersistentEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28505/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21120/ : FAILURE

Compile error at [2022-06-23T12:37:15.852Z] ../kv_engine/engines/ep/src/range_scans/range_scan.h:102:40:
error: unknown type name "EventuallyPersistentEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21120/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17381/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
